# olist-data

./: .env.exemple  .gitignore  .user.yml  README.md  docker-compose.yml  profiles.yml  pyproject.toml
src/: extract.py
src/ingestion/: awss3.py  duck.py  ingestion_aws_pipeline.py  ingestion_pipeline.py  kaggle.py  minio.py  models.py
src/transform/: .user.yml  profiles.yml
src/transform/dbt_project/models/raw/: raw_olist__costumers.sql
src/transform/dbt_project/models/stg/: raw_olist__costumers.sql  secret_config.sql  source_olist__costumers.yml
src/utils/: logger_config.py
